# Bitvar-O01

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  main.py  schemas.py  settings.py
app/academia/: __init__.py  audio.py  config.py  frames.py  gemini.py  media.py  middleware.py  models.py  profiles.py  prompts.py  router.py  routing.py  scoring.py  service.py  store.py
app/events/: __init__.py  bus.py  catalog.py  config.py  context.py  middleware.py  models.py  router.py  sinks.py  store.py
app/tennis/: __init__.py  benchmarks.py  config.py  gemini.py  models.py  prompts.py  quadrants.py  router.py  routing.py  rules.py  service.py  store.py  weights.py
bitvar/: __init__.py  acessibilidade.py  analise.py
docs/: ACADEMIA.md  ANEXO-transcricoes-fonte.md  EVENTS.md  PROBLEMA-pivo-academia.md  Requisitos-pivo-academia.md  TENNIS.md  bitvar-ia-tenis-blueprint.html  calibragem-ia-caio-24jun2026.html  plano-correcao-quadrante-25jun2026.html  quadrante-por-camera-25jun2026.html  relatorio-calibragem-24jun2026.html  specs-bitvar-caio-13jun2026.html  status-implementacao-caio-13jun2026.html  visao-computacional-supervision-30jun2026.html
infra/: README.md
infra/bitvar-001/: docker-compose.example.yml  dynamic.example.yml
infra/scripts/: gen-dashboard-auth.sh  install-docker.sh
infra/traefik/: dynamic.yml  traefik.yml
tests/: test_academia.py  test_analise.py  test_api.py  test_calibration.py  test_events.py  test_tennis.py
tests/fixtures/: __init__.py  (+1 more)
(+3 files in other folders)
