[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bitvar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "python-multipart>=0.0.9",
  "google-genai>=2.8,<3",
  "psycopg[binary,pool]>=3.2,<3.3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
]

[tool.setuptools.packages.find]
include = ["bitvar*", "app*"]
